; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/common/extr_sae.c_sae_process_commit.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/common/extr_sae.c_sae_process_commit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sae_data = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64, i64 }

@SAE_MAX_PRIME_LEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sae_process_commit(%struct.sae_data* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.sae_data*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store %struct.sae_data* %0, %struct.sae_data** %3, align 8
  %7 = load i32, i32* @SAE_MAX_PRIME_LEN, align 4
  %8 = zext i32 %7 to i64
  %9 = call i8* @llvm.stacksave()
  store i8* %9, i8** %4, align 8
  %10 = alloca i32, i64 %8, align 16
  store i64 %8, i64* %5, align 8
  %11 = load %struct.sae_data*, %struct.sae_data** %3, align 8
  %12 = getelementptr inbounds %struct.sae_data, %struct.sae_data* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = icmp eq %struct.TYPE_2__* %13, null
  br i1 %14, label %41, label %15

15:                                               ; preds = %1
  %16 = load %struct.sae_data*, %struct.sae_data** %3, align 8
  %17 = getelementptr inbounds %struct.sae_data, %struct.sae_data* %16, i32 0, i32 0
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %15
  %23 = load %struct.sae_data*, %struct.sae_data** %3, align 8
  %24 = call i64 @sae_derive_k_ecc(%struct.sae_data* %23, i32* %10)
  %25 = icmp slt i64 %24, 0
  br i1 %25, label %41, label %26

26:                                               ; preds = %22, %15
  %27 = load %struct.sae_data*, %struct.sae_data** %3, align 8
  %28 = getelementptr inbounds %struct.sae_data, %struct.sae_data* %27, i32 0, i32 0
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %37

33:                                               ; preds = %26
  %34 = load %struct.sae_data*, %struct.sae_data** %3, align 8
  %35 = call i64 @sae_derive_k_ffc(%struct.sae_data* %34, i32* %10)
  %36 = icmp slt i64 %35, 0
  br i1 %36, label %41, label %37

37:                                               ; preds = %33, %26
  %38 = load %struct.sae_data*, %struct.sae_data** %3, align 8
  %39 = call i64 @sae_derive_keys(%struct.sae_data* %38, i32* %10)
  %40 = icmp slt i64 %39, 0
  br i1 %40, label %41, label %42

41:                                               ; preds = %37, %33, %22, %1
  store i32 -1, i32* %2, align 4
  store i32 1, i32* %6, align 4
  br label %43

42:                                               ; preds = %37
  store i32 0, i32* %2, align 4
  store i32 1, i32* %6, align 4
  br label %43

43:                                               ; preds = %42, %41
  %44 = load i8*, i8** %4, align 8
  call void @llvm.stackrestore(i8* %44)
  %45 = load i32, i32* %2, align 4
  ret i32 %45
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @sae_derive_k_ecc(%struct.sae_data*, i32*) #2

declare dso_local i64 @sae_derive_k_ffc(%struct.sae_data*, i32*) #2

declare dso_local i64 @sae_derive_keys(%struct.sae_data*, i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
